--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@fullcalendar/timegrid": "^6.1.19",
     "@tailwindcss/vite": "^4.1.14",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
+    "react-email-editor": "^1.7.11",
     "react-icons": "^5.5.0",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.9.4",
