--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.13.2",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
     "react-chatbot-kit": "^2.2.2",
@@ -23,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.6.0",
     "tailwindcss": "^4.1.14"
   },
